Use FAB from Android Support Library

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -90,13 +90,13 @@
 
         </LinearLayout>
 
-        <com.melnykov.fab.FloatingActionButton
+        <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|right"
             android:layout_margin="16dp"
-            android:src="@drawable/ic_action_add"
-            app:fab_colorNormal="@color/color_palette_1"/>
+            android:src="@drawable/ic_action_add">
+        </android.support.design.widget.FloatingActionButton>
     </FrameLayout>
 </RelativeLayout>
