--- a/app/src/main/res/layout-v22/material_color_palette_item.xml
+++ b/app/src/main/res/layout-v22/material_color_palette_item.xml
@@ -22,13 +22,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginTop="-16dp"
     android:orientation="vertical">
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/color_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="6dp"
         app:borderWidth="0dp"
         app:elevation="6dp" />
 </LinearLayout>
