--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -76,11 +76,8 @@
                 android:layout_marginBottom="16dp"
                 android:textColor="@color/text_gray"/>
 
-            <com.reddyetwo.hashmypass.app.view.MaterialColorPalette
+            <android.support.v7.widget.RecyclerView
                 android:id="@+id/profile_color_palette"
-                app:color_palette_normal="@array/color_palette_normal"
-                app:color_palette_pressed="@array/color_palette_pressed"
-                app:color_palette_ripple="@array/color_palette_ripple"
                 android:layout_width="wrap_content"
                 android:layout_height="68dp"/>
 
